[workspace]
resolver = "3"
members = ["pyo3-twisted", "pyo3-twisted-example"]

[workspace.dependencies]
pyo3 = { version = "0.24.1" }
tokio = { version = "1.44.2" }
once_cell = "1.18.0"
pyo3-twisted = { path = "./pyo3-twisted" }

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Quentin Gliech <quenting@element.io>"]
readme = "./README.md"
repository = "https://github.com/sandhose/pyo3-twisted"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# We use groups as good defaults, but with a lower priority so that we can override them
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

str_to_string = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
