[package]
name = "pyo3-twisted-example"
description = "An example of using pyo3-twisted"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.44.2", features = ["time"] }
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py39"] }

pyo3-twisted = { path = "../rust" }
