[package]
name = "pyo3-twisted"
description = "An experimental bridge between Tokio and Twisted Deferreds"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
# We need OnceCell::get_or_try_init, which isn't stable in std's OnceLock
once_cell.workspace = true
pyo3.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
